--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="discription" content="プログラミングを3分動画で学べるサービスです">
 
-  <title>ドットインストール</title>
+  <title>ドットインストールtest</title>
   <link rel="icon" href="favicon.png">
 </head>
 
